--- a/css/style.css
+++ b/css/style.css
@@ -325,11 +325,50 @@ html,body{
   font-weight: 700;
   line-height: 1.1em;
 }
+
 /* Index Page About  Section ENd */
+
+/* Index Page Service Slider Start */
+.bg-lightsecondary .section-title h5::before{
+background:#FFFFFF;
+
+}
+
+/* Index Page Service Slider Start */
+.service-item{
+  background: #FFFFFF ;
+    border-radius: 24px;
+    height: calc(100% - 30px);
+    margin-bottom: 30px;
+    overflow: hidden;
+}
+.service-body{
+  text-align: center;
+    padding: 30px 18px;
+}
+.swiper-container{
+  width: 600px;
+  height: 300px;
+}
+
+
+
+
+  
+
 /*** Utility Class ***/
 .text-green{
     color: #299b46;
 }
 .fw-7{
     font-weight: 700;
+}
+.bg-lightsecondary{
+  background-color:#F5f7f2 ;
+}
+.text-white{
+  color: #FFFFFF;
+}
+.top-padding{
+  padding: 100px 0;
 }
