--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ html,body{
     width: 6px;
     height: 6px;
 }
-.section-title h2{
+.section-title h1{
     font-size: 60px;
     line-height: 1.1em;
     letter-spacing: -0.02em;
@@ -191,10 +191,11 @@ html,body{
 
 /* Index Page About  Section Start */
 .section-title h2{
-  font-size: 43px;
+  font-size: 46px;
     line-height: 1.1em;
     letter-spacing: -0.02em;
     margin-bottom: 0;
+    font-weight: 700;
     cursor: none;
     color: #002f47;
 }
@@ -354,10 +355,8 @@ background:#FFFFFF !important;
   text-align: center;
     padding: 30px 18px;
 }
-.swiper-container{
-  width: 600px;
-  height: 300px;
-}
+
+
 /* Index Page features section start */
 .features-item{
   width: calc(50% - 15px);
@@ -556,7 +555,194 @@ background:#FFFFFF !important;
   margin-bottom: 0px !important;
   line-height: 1.6em;
 }
-/*  */
+/* index-page faq Section Start */
+.our-faq-images{
+  position: relative;
+    background: url('https://html.awaikenthemes.com/petronus/images/about-us-dot-img.png') no-repeat;
+    background-position: left 187px bottom 46px;
+    background-size: 84px auto;
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 20px;
+}
+.faqs-img-1{
+  padding-right: 242px;
+}
+.faqs-img-1 figure img{
+  aspect-ratio: 1 / 1.514;
+}
+.faqs-img-2 figure img {
+  aspect-ratio: 1 / 1.02;
+}
+.faqs-img-3 figure img{
+  aspect-ratio: 1 / 0.847;
+}
+.faqs-img-2, .faqs-img-1 {
+  width: 100%;
+}
+
+.faqs-img-3 figure, .faqs-img-2 figure, .faqs-img-1 figure {
+  display: block;
+  border-radius: 18px;
+}
+.faqs-img-3 img, .faqs-img-2 img, .faqs-img-1 img {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 18px;
+}
+.faqs-img-2 {
+  max-width: 353px;
+  margin: 0 auto;
+  margin-right: 0;
+  margin-top: -254px;
+}
+.faqs-img-3{
+  position: absolute;
+  top: 80px;
+  right: 0;
+  width: 100%;
+  max-width: 222px;
+}
+.accordion-button:not(.collapsed)::after {
+  transform: rotate(-90deg) !important;
+}
+.accordion-button::after{
+  background-image: url('https://html.awaikenthemes.com/petronus/images/arrow-white.svg') !important;
+  transform: rotate(90deg) !important;
+}
+.accordion-button.accordion-button:not(.collapsed){
+  box-shadow: none !important;
+}  
+
+/* INdex page testimonial Page  */
+.bg-img{
+  background: url('https://html.awaikenthemes.com/petronus/images/testimonial-bg-img.png') no-repeat;
+  background-position: center center;
+  background-size: auto;
+}
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.testimonial-item{
+  background:#FFFFFF;
+  border: 1px solid #002F471A;
+  border-radius: 24px;
+  padding: 40px;
+}
+.testimonial-author .image-anime .img-pill{
+  width: 100%;
+  max-width: 60px;
+  border-radius: 50%;
+}
+.testimonial-rating i{
+  font-size: 18px;
+  color: #299b46;
+}
+.swiper-pagination .swiper-pagination-bullet{
+  height: 10px ;
+  width: 10px;
+  opacity: 1;
+  margin: 0 3px;
+  background: #3d5a6a ;
+  transition: all 0.4s ease-in-out;
+}
+.swiper-pagination-bullet-active{
+  background: #299b46 !important;
+  width: 20px !important;
+  border-radius: 12px !important;
+}
+/* testimonial section ends */
+
+/* Need section Start */
+.cta-box{
+  position: relative;
+  background: url('https://html.awaikenthemes.com/petronus/images/cta-box-bg.jpg') no-repeat;
+  background-position: center center;
+  background-size: cover;
+  padding: 30px 0 0;
+}
+.cta-box::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #002f47;
+  opacity: 80%;
+  z-index: 0;
+}
+.cta-box-image {
+  position: relative;
+  text-align: center;
+  margin-right: 90px;
+  z-index: 1;
+}
+.cta-box-image img {
+  width: 100%;
+  aspect-ratio: 1 / 0.977;
+  object-fit: cover;
+} 
+.cta-box-content{
+  position: relative;
+  height: calc(100% - 30px);
+  align-content: center;
+  margin-bottom: 30px;
+  z-index: 1;
+}
+.cta-box-body ul li{
+  position: relative;
+  /* color: var(--white-color); */
+  line-height: 1.5em;
+  text-transform: capitalize;
+  padding-left: 30px;
+  margin-bottom: 15px;
+}
+.cta-box-body ul li::before{
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 1px;
+  background-image: url(https://html.awaikenthemes.com/petronus/images/arrow-white.svg);
+  background-color: #299b46;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 14px auto;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*** Utility Class ***/
 .text-green{
@@ -581,5 +767,8 @@ background:#FFFFFF !important;
   color: #3d5a6a;
 }
 .bg-navyblue{
-  background-color: #002f47;
+  background-color: #002f47 !important;
+}
+.text-navyblue{
+  color: #002f47;
 }
