--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,7 @@ background:#FFFFFF !important;
 .features-image figure img{
   width: 100%;
     aspect-ratio: 1 / 0.8937;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 24px;
 }
 .reveal img{
