--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,12 @@ html,body{
   font-size: 1.2rem;
   position: relative;
   color: #3d5a6a !important; 
+  transition: all 0.3s ease;
+
+}
+.nav-link:hover{
+  color: #1b59dd !important;
+  transition: all 0.3s ease;
 }
 /* Index Page Hero Section */
 .hero{
@@ -809,7 +815,9 @@ background:#FFFFFF !important;
   padding: 10px;
   border-radius: 50%;
 }
-
+.border-radius{
+  border-radius: 25px;
+}
 
 
 
@@ -849,3 +857,68 @@ background:#FFFFFF !important;
 .text-navyblue{
   color: #002f47;
 }
+
+/*** Contact Page Start ***/
+.page-header{
+  position: relative;
+  background-image: url('https://html.awaikenthemes.com/petronus/images/page-header-bg.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  padding: 105px 0;
+}
+.page-header::before{
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(270deg, rgba(0, 47, 71, 0.18) 21.87%, rgba(0, 47, 71, 0.9) 100%);
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+.contact-about-icon{
+  color: #FFFFFF;
+  font-size: 2.5rem;
+}
+.contact-form-img{
+  height: 100%;
+  width: 100%;
+  aspect-ratio: 1 / 0.99;
+  object-fit: cover;
+}
+.section-title .text-anime{
+  font-size: 44px;
+}
+.contact-form .form-control{
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5em;
+  color: #013198;
+  background-color: #FFFFFF;
+  border: 1px solid #002F471A;
+  border-radius: 12px;
+  padding: 15px 20px;
+  box-shadow: none;
+  outline: none;
+}
+.btn-default{
+  position: relative;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1em;
+    text-transform: capitalize;
+    background: #013198;
+    color: #FFFFFF;
+    border-radius: 100px;
+    padding: 17px 30px;
+    margin-right: 50px;
+    border: none;
+    transition: all 0.5s ease-in-out;
+    z-index: 1;
+}
+/*** Contact Page End ***/
