now major this is done. waiting for clinets feedback and updates

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ html,body{
     background: url('https://html.awaikenthemes.com/petronus/images/hero-bg.jpg') no-repeat;
     background-position: center center;
     background-size: cover;
-    padding: 140px 0;
+    padding: 118px 0;
 }
 .hero::before{
     content: '';
@@ -1047,6 +1047,11 @@ background:#FFFFFF !important;
 }
 .border-green{
   border: 2px solid #013198;
+}
+@media(max-width:768px){
+  .flex-reverse-small{
+       flex-direction: column-reverse;
+  }
 }
 
 /*** Contact Page Start ***/
