--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ html,body{
 .navbar-brand img {
   padding-bottom: 8px;
   min-width: 100px;
-  height: 80px;
+  height: 95px;
   max-height: 120px;
   max-width: 250px;
   transition: all 0.3s ease-in-out; /* Smooth transition for logo resizing */
@@ -170,6 +170,9 @@ html,body{
   }
   .section-title h5{
     padding: 4px 15px 4px 31px;
+  }
+  .hero-image img{
+    margin-bottom: -134px;
   }
   
 }
@@ -1133,6 +1136,30 @@ background:#FFFFFF !important;
   .flex-direction{
     flex-direction: column;
   }
+  
+}
+@media (max-width: 991px) {
+  .navbar-collapse {
+    flex-basis: 100%;
+    flex-grow: 1;
+    align-items: center;
+    background: #ffffff;
+    padding-left: 10px;
+    margin-top: 10px;
+    padding-top: 10px;
+    /* padding-bottom: 10px; */
+    border: solid 1px #dee2e6;
+    
+    /* border-radius: 0 0 10px 10px; */
+    /* box-shadow: 2px 2px 20px black; */
+}
+
+.navbar-nav .dropdown-menu {
+    position: static;
+    background: #2125298f;
+}
+
+  
 }
 /*** Contact Page End ***/
 
